<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find"
            android:title="Find" />

        <item
            android:id = "@+id/nav_recipe"
            android:title="Recipe" />
        <item
            android:id="@+id/nav_profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_matches"
            android:title="Matches" />
        <item
            android:id="@+id/nav_cookbook"
            android:title="CookBook" />
        <item
            android:id="@+id/nav_manage"
            android:title="Settings" />
    </group>

    <!--item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
...
