...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:text="@string/mTextDetails"
        android:id="@+id/textView"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
...
